@@ -1,3 +1,8 @@
+2004-10-18  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/generic/strcpy_chk.c (__strcpy_chk): Speed up by checking
+	destlen only every 4 bytes.
+
 2004-10-06  Maciej W. Rozycki  <macro@mips.com>
 
 	* sysdeps/unix/sysv/linux/mips/mips32/sysdep.h
